# mantlememo

./: PRODUCTION_READY_SUMMARY.txt  README.md  env.example  index.html  package.json  tailwind.config.js  vite.config.ts
backend/: env.example  main.py  render.yaml  requirements.txt
backend/app/: __init__.py
backend/app/core/: config.py
backend/app/services/: llm_service.py
contracts/: contract.sol
contracts/all-contracts/: Anchor.toml  Cargo.toml  DEPLOY.md  deploy.ps1  lib.rs
contracts/solmind-staking/: Anchor.toml
docs/: DEPLOYMENT_INSTRUCTIONS.md  FIXES_APPLIED.md  PRODUCTION_SETUP.md  RENDER_DEPLOYMENT.md  check.md  idea.md  integration.md  production-ready.md
docs/code/: ARCHITECTURE_VERIFICATION.md  QUICK_START.md  REPO.md  SETUP.md  STORAGE_ARCHITECTURE.md  VERCEL_KV_SETUP.md  backend.md  supabase.md
mantlememo-sdk/: README.md  sdk.py  setup.py
mantlememo-sdk/mantlememo/: agent.py  client.py  errors.py
mantlememo-sdk/mantlememo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mantlememo-sdk/solmind/: agent.py  client.py  errors.py
src/: App.tsx  index.css
src/components/: Navbar.tsx
src/contexts/: WalletContextProvider.tsx
src/hooks/: useCapsuleQuery.ts  useMantleBalance.ts  useSolanaBalance.ts
src/lib/: api.ts
src/pages/: AgentsView.tsx  CapsuleDetail.tsx  DevelopersPage.tsx  EarningsDashboard.tsx  LandingPage.tsx  MainApp.tsx  Marketplace.tsx  MemoryCapsuleView.tsx  Settings.tsx  Staking.tsx  WalletBalance.tsx
src/styles/: mantle-components.css
src/utils/: mantlePayment.ts  solanaPayment.ts  storage.ts
(+3 files in other folders)
